--- a/public/css/main.css
+++ b/public/css/main.css
@@ -93,11 +93,14 @@ a.show-sidebar:hover {
   transition: 0.2s;
 }
 #note_box {
-  height: 100%;
+  height: 300px;
   margin: 15px;
   background: #fefefe;
   border: 1px solid #bbb;
   padding: 10px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 .full-content {
   overflow: hidden;
@@ -168,4 +171,14 @@ a.show-sidebar:hover {
 }
 .notes-list {
   padding-top: 15px;
+}
+.note-editor-container {
+  padding-top: 15px;
+}
+.form-control {
+  height: 300px;
+}
+.save-bar {
+  padding-top: 5px;
+  float: right;
 }
