--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,16 +1,6 @@
 body {
   color: #525252;
 }
-.body-expanded, .modal-open {
-  overflow-y:hidden;
-  margin-right: 15px;
-}
-.body-expanded .expanded-panel, .fancybox-margin .expanded-panel, .modal-open .expanded-panel {
-  margin-right: 15px;
-}
-.body-screensaver {
-  overflow: hidden;
-}
 h1, .h1, h2, .h2, h3, .h3 {
   margin:0;
 }
@@ -46,38 +36,19 @@ h1, .h1, h2, .h2, h3, .h3 {
   box-shadow: 0 1px 2px #272727;
   z-index: 2000;
 }
-.body-expanded .navbar {
-  z-index: 9;
-}
-a.show-sidebar {
-  float: left;
-  color:#6d6d6d;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-a.show-sidebar:hover {
-  color:#000;
-}
 #sidebar-left {
   position:relative;
   z-index: inherit;
   padding-bottom: 3000px !important;
   margin-bottom: -3000px !important;
-  /*background: #fefefe;*/
+  background: #fefefe;
   /*border-right: 1px solid black;*/
   box-shadow: 0 0 1px #131313;
-  background: #eee;
+  /*background: #eee;*/
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
-}
-.folder-name {
-/*  padding-top: 10px;
-  padding-left: 13px;*/
-  box-shadow: 0 2px 0 #131313;
 }
 #content {
   position: relative;
@@ -158,12 +129,6 @@ a.show-sidebar:hover {
 }
 #search > input:focus + i {
   opacity:1;
-}
-.folder-item {
-  color: #666;
-}
-.folder-list {
-  padding-top: 15px;
 }
 .note-item {
   color: #333;
