--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -52,7 +52,11 @@
     <div class="row">
         <div id="sidebar-left" class="col-xs-12 col-sm-3">
             <ul class="nav notes-list">
-                <li ng-repeat="note in notes" ng-click=displayNote(note)>
+                <div class="notes-list-head">
+                    All Notes
+                    <button class="btn btn-default btn-primary"><span class="glyphicon glyphicon-plus"></span> Add new note</button>
+                </div>
+                <li ng-repeat="note in notes" ng-click=displayNote(note) ng-class="{'note-selected': mainNote===note}">
                     <a href='#'>
                         <x-note-item preview=note.text />
                     </a>
