--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,26 +1,22 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
+	<title>TranScribe</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<style>
-		body 		{ padding-top:80px; }
-	</style>
+	<link href="css/authstyle.css" rel="stylesheet">
 </head>
 <body>
+<% include header %>
 <div class="container">
 
-<div class="col-sm-6 col-sm-offset-3">
+<div class="main-panel col-sm-4 col-sm-offset-4">
 
-	<h1><span class="fa fa-sign-in"></span> Login</h1>
+	<h1>Login</h1>
 
-	<!-- show any messages that come back with authentication -->
 	<% if (message.length > 0) { %>
 		<div class="alert alert-danger"><%= message %></div>
 	<% } %>
 
-	<!-- LOGIN FORM -->
 	<form action="/login" method="post">
 		<div class="form-group">
 			<label>Email</label>
@@ -30,15 +26,12 @@
 			<label>Password</label>
 			<input type="password" class="form-control" name="password">
 		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Login</button>
+		<!-- <div class="form-action"> -->
+			<button type="submit" class="btn btn-primary btn-lg">Login</button>
+		<!-- </div> -->
 	</form>
-
 	<hr>
-
 	<p>Need an account? <a href="/signup">Signup</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-
 </div>
 
 </div>
