--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -31,7 +31,7 @@
     <div class="container-fluid expanded-panel">
         <div class="row">
             <div id="logo" class="col-xs-12 col-sm-2">
-                <a href="index.html">TranScribe</a>
+                <a href="#">TranScribe</a>
             </div>
             <div id="top-panel" class="col-xs-12 col-sm-10">
                 <div class="row">
