--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -31,7 +31,7 @@
     <div class="container-fluid expanded-panel">
         <div class="row">
             <div id="logo" class="col-xs-12 col-sm-2">
-                <a href="#">TranScribe</a>
+                <a href="/">TranScribe</a>
             </div>
             <div id="top-panel" class="col-xs-12 col-sm-10">
                 <div class="row">
@@ -55,7 +55,7 @@
                 <div class="notes-list-head">
                     <span ng-show="!searchText">All Notes</span>
                     <span ng-show="searchText">Search results</span>
-                    <button class="btn btn-default btn-primary"><span class="glyphicon glyphicon-plus"></span> Add new note</button>
+                    <i class="fa fa-refresh" ng-click="refreshNotes()"></i>
                 </div>
                 <li ng-repeat="note in notes | filter:searchText" ng-click=displayNote(note) ng-class="{'note-selected': mainNote===note}">
                     <a href='#'>
