--- a/public/css/main.css
+++ b/public/css/main.css
@@ -163,6 +163,10 @@ h1, .h1, h2, .h2, h3, .h3 {
   padding-left: 10px;
   cursor: pointer;
 }
+.fa-plus {
+  float: right;
+  padding-right: 15px;
+}
 .note-editor-container {
   padding-top: 10px;
 }
