--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -30,12 +30,12 @@
 <header class="navbar">
     <div class="container-fluid expanded-panel">
         <div class="row">
-            <div id="logo" class="col-xs-12 col-sm-2">
+            <div id="logo" class="col-xs-2 col-sm-2">
                 <a href="/">TranScribe</a>
             </div>
-            <div id="top-panel" class="col-xs-12 col-sm-10">
+            <div id="top-panel" class="col-xs-10 col-sm-10">
                 <div class="row">
-                    <div class="col-xs-8 col-sm-4">
+                    <div class="col-xs-4 col-sm-4">
                         <div id="search">
                             <input ng-model="searchText" type="text" placeholder="search"/>
                             <i class="fa fa-search"></i>
@@ -49,8 +49,8 @@
 <!--End Header-->
 <!--Start Container-->
 <div id="main" class="container-fluid">
-    <div class="row">
-        <div id="sidebar-left" class="col-xs-12 col-sm-3">
+    <div id="main_row" class="row">
+        <div id="sidebar-left" class="col-xs-4 col-sm-3">
             <ul class="nav notes-list">
                 <div class="notes-list-head">
                     <span ng-show="!searchText">All Notes</span>
@@ -68,17 +68,17 @@
         </div>
 
         <!--Start Content-->
-        <div id="content" class="col-xs-12 col-sm-9">
+        <div id="content" class="col-xs-8 col-sm-9">
             <!-- <x-note-display /> -->
             <div class="note-editor-container">
                 <!-- Some text -->
                 <div id="note_box" ng-show="editContent && !editView" ng-bind="editContent" ng-click="enableEdit()"></div>
                 <div class="note-panel" text-angular ng-show="editView" ng-model="editContent"></div>
                 <div class="bottom-bar">
-                    <div class="tags col-xs-12 col-sm-10" ng-show="editContent">
+                    <div class="tags col-xs-8 col-sm-10" ng-show="editContent">
                         <tags-input ng-model="mainNote.tags" max-length=15 on-tag-added="addTag()" on-tag-removed="removeTag()"></tags-input> 
                     </div>
-                    <div class="save-bar col-xs-12 col-sm-2">
+                    <div class="save-bar col-xs-4 col-sm-2">
                         <a href="#" class="btn btn-success btn-large" ng-show="editView" ng-click="saveEdit()">Save</a>
                         <a href="#" class="btn btn-warning btn-large" ng-show="editView" ng-click="cancelEdit()">Cancel</a>
                     </div>
