--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,6 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 #logo {
   position:relative;
-  background: #525252;
 }
 #logo a {
   color: #fff;
@@ -25,6 +24,18 @@ h1, .h1, h2, .h2, h3, .h3 {
 #logo a:hover {
   background-position: right 25px;
   text-decoration: none;
+}
+.profile-dropdown {
+  background: #525252;
+}
+.nav-pills>li>a {
+  color: white;
+}
+.nav-pills>li>a:hover {
+  background: #525252;
+}
+.nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
+  background: #525252;
 }
 .navbar {
   margin: 0;
@@ -94,7 +105,6 @@ h1, .h1, h2, .h2, h3, .h3 {
   line-height: 50px;
   height: 50px;
   /*background: #ebebeb;*/
-  background: #525252;
 }
 #main {
   margin-top: 50px;
