--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,11 +89,25 @@ h1, .h1, h2, .h2, h3, .h3 {
   margin: 15px;
   background: #fefefe;
   border: 1px solid #bbb;
-  padding: 10px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  overflow: auto;
+  overflow-y: auto;
+  position: relative;
+}
+#note_box:hover {
+  cursor: pointer;
+}
+#display_box {
+  padding: 10px;
+  height: 250px;
+}
+#info_bar {
+  position: absolute;
+  bottom: 0;
+  padding: 5px 10px;
+  background: #ddd;
+  width: 100%;
 }
 .full-content {
   overflow: hidden;
