--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,17 +179,14 @@ h1, .h1, h2, .h2, h3, .h3 {
 .notes-list-head {
   font-size: 18px;
   border-bottom: 1px solid #aaa;
-  padding-bottom: 20px;
-  padding-left: 15px;
+  padding-bottom: 40px;
+  /*padding-bottom: 20px;*/
+  /*padding-left: 15px;*/
 }
-.notes-list-head .fa {
+.notes-list-head .fa-refresh {
   padding-top: 3px;
   padding-left: 10px;
   cursor: pointer;
-}
-.fa-plus {
-  float: right;
-  padding-right: 15px;
 }
 .note-editor-container {
   padding-top: 10px;
