--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -32,12 +32,12 @@
 <header class="navbar">
     <div class="container-fluid expanded-panel profile-dropdown">
         <div class="row">
-            <div id="logo" class="col-xs-2 col-sm-2">
+            <div id="logo" class="col-xs-3 col-sm-2">
                 <a href="/">TranScribe</a>
             </div>
-            <div id="top-panel" class="col-xs-8 col-sm-8">
+            <div id="top-panel" class="col-xs-7 col-sm-8">
                 <div class="row">
-                    <div class="col-xs-4 col-sm-4">
+                    <div class="col-xs-10 col-sm-4">
                         <div id="search">
                             <input ng-model="searchText" type="text" placeholder="search"/>
                             <i class="fa fa-search"></i>
@@ -64,7 +64,8 @@
 <!--Start Container-->
 <div id="main" class="container-fluid">
     <div id="main_row" class="row">
-        <div id="sidebar-left" class="col-xs-4 col-sm-3">
+        <!--Start Sidebar-->
+        <div id="sidebar-left" class="col-xs-12 col-sm-3" resizable ng-style="{ height: windowHeight }">
             <ul class="nav notes-list">
                 <div class="notes-list-head">
                     <div class="col-xs-9 col-sm-10">
@@ -77,19 +78,18 @@
                     </div>
                 </div>
                 <li ng-repeat="note in notes | filter:multiFilter" ng-click=displayNote(note) ng-class="{'note-selected': mainNote===note}">
-                    <a href='#'>
+                    <a href="#">
                         <x-note-item note=note />
                     </a>
                 </li>
                 <div class="no-results" ng-show="(notes | filter:multiFilter).length == 0"><i>no results found</i></div>
             </ul>
         </div>
+        <!--End Sidebar-->
 
         <!--Start Content-->
-        <div id="content" class="col-xs-8 col-sm-9">
-            <!-- <x-note-display /> -->
+        <div id="content" class="col-xs-12 col-sm-9">
             <div class="note-editor-container">
-                <!-- Some text -->
                 <div id="note_box" ng-show="editContent && !editView" ng-mouseenter="showShare()" ng-mouseleave="hideShare()">
                     <div id="display_box" ng-bind-html="editContent" ng-click="enableEdit()"></div>
                     <div id="info_bar" ng-show="sharebar" ng-click="shareNote()">Share <i class="fa fa-share-square-o"></i></div>
@@ -109,5 +109,6 @@
         <!--End Content-->
     </div>
 </div>
+<!--End Container-->
 </body>
 </html>
