--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,16 @@
-body {
-  color: #525252;
+html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  color: #525252;
+}
+body {
+  position: relative;
   overflow-y: hidden;
 }
-h1, .h1, h2, .h2, h3, .h3 {
-  margin:0;
-}
+
+/* Header */
 #logo {
   position:relative;
 }
@@ -28,10 +32,8 @@ h1, .h1, h2, .h2, h3, .h3 {
 .profile-dropdown {
   background: #525252;
 }
-.nav-pills>li>a {
+.nav-pills>li>a, .nav-pills>li>a:hover {
   color: white;
-}
-.nav-pills>li>a:hover {
   background: #525252;
 }
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus {
@@ -50,19 +52,59 @@ h1, .h1, h2, .h2, h3, .h3 {
   box-shadow: 0 1px 2px #272727;
   z-index: 2000;
 }
+#top-panel {
+  line-height: 50px;
+  height: 50px;
+}
+#search {
+  position: relative;
+  margin-left: 10px;
+}
+#search > input {
+  width: 80%;
+  background: #dfdfdf;
+  border: 1px solid #C7C7C7;
+  text-shadow:0 1px 1px #EEE;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  color: #686868;
+  line-height: 1em;
+  height: 30px;
+  padding: 0 35px 0 10px;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+#search > input + i {
+  opacity:0;
+  position: absolute;
+  top: 18px;
+  right: 10px;
+  color: #525252;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+#search > input:focus {
+  width:100%;
+  outline:none;
+}
+#search > input:focus + i {
+  opacity:1;
+}
+
+/* Sidebar */
 #sidebar-left {
   position:relative;
   z-index: inherit;
-/*  padding-bottom: 3000px !important;
-  margin-bottom: -3000px !important;*/
   background: #fefefe;
-  /*border-right: 1px solid black;*/
   box-shadow: 0 0 1px #131313;
-  /*background: #eee;*/
   padding-left: 0px;
   padding-right: 0px;
-  overflow: auto;
-  height: 600px;
+  overflow-y: auto;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
@@ -71,14 +113,43 @@ h1, .h1, h2, .h2, h3, .h3 {
 .nav>li>a {
   padding: 10px 0px;
 }
+.note-selected {
+  background-color: #eee;
+}
+.no-results {
+  text-align: center;
+  color: #ccc;
+  padding-top: 15px;
+}
+.note-item {
+  color: #333;
+  height: 60px;
+}
+.notes-list {
+  padding-top: 15px;
+}
+.notes-list > li {
+  border-bottom: 1px solid #aaa;
+}
+.notes-list-head {
+  font-size: 18px;
+  border-bottom: 1px solid #aaa;
+  padding-bottom: 40px;
+}
+.notes-list-head .fa-refresh {
+  padding-top: 3px;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+/* Main panel */
 #content {
   position: relative;
   z-index: 10;
   background: #ebebeb;
   box-shadow: 0 0 4px #131313;
   padding-bottom: 3000px !important;
-  margin-bottom: -2980px !important;
-  overflow-y: hidden;
+  margin-bottom: -3000px !important;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
@@ -109,84 +180,9 @@ h1, .h1, h2, .h2, h3, .h3 {
   background: #ddd;
   width: 100%;
 }
-.full-content {
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-}
-
-#top-panel {
-  line-height: 50px;
-  height: 50px;
-  /*background: #ebebeb;*/
-}
 #main {
   margin-top: 50px;
-  min-height: 800px;
   overflow-y: hidden;
-}
-#search {
-  position: relative;
-  margin-left: 10px;
-}
-#search > input {
-  width: 80%;
-  background: #dfdfdf;
-  border: 1px solid #C7C7C7;
-  text-shadow:0 1px 1px #EEE;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  color: #686868;
-  line-height: 1em;
-  height: 30px;
-  padding: 0 35px 0 10px;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-#search > input + i {
-  opacity:0;
-  position: absolute;
-  top: 18px;
-  right: 10px;
-  /*color: #fff;*/
-  color: #525252;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
-}
-#search > input:focus {
-  width:100%;
-  outline:none;
-}
-#search > input:focus + i {
-  opacity:1;
-}
-.note-item {
-  color: #333;
-  /*border-bottom: 1px solid #aaa;*/
-  height: 60px;
-}
-.notes-list {
-  padding-top: 15px;
-}
-.notes-list > li {
-  border-bottom: 1px solid #aaa;
-}
-.notes-list-head {
-  font-size: 18px;
-  border-bottom: 1px solid #aaa;
-  padding-bottom: 40px;
-  /*padding-bottom: 20px;*/
-  /*padding-left: 15px;*/
-}
-.notes-list-head .fa-refresh {
-  padding-top: 3px;
-  padding-left: 10px;
-  cursor: pointer;
 }
 .note-editor-container {
   padding-top: 10px;
@@ -201,12 +197,4 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 .note-panel {
   margin: 15px;
-}
-.note-selected {
-  background-color: #eee;
-}
-.no-results {
-  text-align: center;
-  color: #ccc;
-  padding-top: 15px;
 }
