--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -19,7 +19,7 @@
     <script src="js/main.js"></script>
     <script>
         // ugly hack passing in user info
-        window.newuser = {"id": "<%= user.id %>", "email": "<%= user.email %>", "notes": <%- JSON.stringify(user.notes) %> };
+        window.newuser = {"id": "<%= user.id %>", "uname": "<%= user.uname %>", "notes": <%- JSON.stringify(user.notes) %> };
     </script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -48,7 +48,7 @@
             <div class="col-xs-2 col-sm-2">
             <ul class="nav nav-pills">
                 <li class="dropdown pull-right">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">{{email }} <b class="caret"></b></a>
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">{{uname }} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="/logout">Logout</a></li>
                         <li class="divider"></li>
