Add landing page, update styles

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -1,4 +1,5 @@
 <link href='http://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 <style>
     #logo {
@@ -32,12 +33,13 @@
       border-radius: 0;
       box-shadow: 0 1px 2px #272727;
       z-index: 2000;
-      background: #525252;
+      font-family: 'Open Sans';
+      background: #2f2f2f;
     }
     .navbar-nav>li>a {
         color: white;
     }
-    .navbar-nav>li>a:hover {
+    .navbar-nav>li>a:hover, .navbar-nav>li>a:focus {
         background: #323232;
     }
 </style>    
