--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>TranScribe</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/authstyle.css" rel="stylesheet">
 	<script src="js/angular.min.js"></script>
@@ -9,6 +10,11 @@
 </head>
 <body ng-app="validationApp" ng-controller="mainController">
 <% include header %>
+<style>
+	body {
+		font-family: 'Open Sans';
+	}
+</style>
 <div class="container">
 
 <div class="main-panel col-sm-4 col-sm-offset-4">
