--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>TranScribe</title>
-    <meta name="description" content="description">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ng-tags-input.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     <link href="css/main.css" rel="stylesheet">
