--- a/public/css/ng-tags-input.css
+++ b/public/css/ng-tags-input.css
@@ -30,18 +30,14 @@ tags-input .tags .tag-item {
   padding: 0 5px;
   display: inline-block;
   float: left;
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   height: 26px;
   line-height: 25px;
   border: 1px solid #acacac;
   border-radius: 3px;
   background: #dbdbdb;
-  /*background: -webkit-linear-gradient(top, #f0f9ff 0%, #cbebff 47%, #a1dbff 100%);*/
-  /*background: linear-gradient(to bottom, #f0f9ff 0%, #cbebff 47%, #a1dbff 100%);*/
 }
 tags-input .tags .tag-item.selected {
-  background: -webkit-linear-gradient(top, #febbbb 0%, #fe9090 45%, #ff5c5c 100%);
-  background: linear-gradient(to bottom, #febbbb 0%, #fe9090 45%, #ff5c5c 100%);
+  color: red;
 }
 tags-input .tags .tag-item .remove-button {
   margin: 0 0 0 5px;
@@ -50,7 +46,6 @@ tags-input .tags .tag-item .remove-button {
   background: none;
   cursor: pointer;
   vertical-align: middle;
-  font: bold 16px Arial, sans-serif;
   color: #585858;
 }
 tags-input .tags .tag-item .remove-button:active {
@@ -64,7 +59,6 @@ tags-input .tags .input {
   padding-left: 5px;
   float: left;
   height: 26px;
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: transparent;
 }
 tags-input .tags .input.invalid-tag {
