--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -96,10 +96,10 @@
                 </div>
                 <div class="note-panel" text-angular ng-show="editView" ng-model="editContent"></div>
                 <div class="bottom-bar">
-                    <div class="tags col-xs-8 col-sm-10" ng-show="editContent">
+                    <div class="tags col-xs-8 col-sm-9" ng-show="editContent">
                         <tags-input ng-model="mainNote.tags" max-length=15 on-tag-added="addTag()" on-tag-removed="removeTag()"></tags-input> 
                     </div>
-                    <div class="save-bar col-xs-4 col-sm-2">
+                    <div class="save-bar col-xs-4 col-sm-3 text-right">
                         <a href="#" class="btn btn-success btn-large" ng-show="editView" ng-click="saveEdit()">Save</a>
                         <a href="#" class="btn btn-warning btn-large" ng-show="editView" ng-click="cancelEdit()">Cancel</a>
                     </div>
