--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -27,7 +27,9 @@
 	    		<div class="col-lg-2">
 	    		</div>
 	    		<div class="col-lg-8">
-	    			<iframe title="Youtube video player" width="680" height="390" src="http://www.youtube.com/embed/SHaoHHEoIRA" frameborder="0"></iframe>
+	    			<div class="video-container">
+		    			<iframe title="Youtube video player" width="680" height="390" src="http://www.youtube.com/embed/SHaoHHEoIRA" frameborder="0"></iframe>
+		    		</div>
 	    		</div>
 	    		<div class="col-lg-2">
 	    		</div>
