Fix url shortener

--- a/app/views/notes.ejs
+++ b/app/views/notes.ejs
@@ -82,7 +82,7 @@
                         <x-note-item note=note />
                     </a>
                 </li>
-                <div class="no-results" ng-show="(notes | filter:multiWordFilter).length == 0"><i>no results found</i></div>
+                <div class="no-results" ng-show="(notes | filter:multiWordFilter).length == 0"><i>no notes found</i></div>
             </ul>
         </div>
         <!--End Sidebar-->
