--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -42,7 +42,7 @@
 			<div class="row">
 				<h1 class="centered">Capture</h1>
 				<br>
-				<h2 class="centered">Short thing here</h2>
+				<h2 class="centered">Save a note with just a click of a button</h2>
 				<div class="col-lg-12 centered">
 					<img class=" img-responsive" src="img/capture.png" alt="phone capture">
 				</div>
